Update 5.1. Основы виртуализации.md

--- a/5.1. Основы виртуализации.md
+++ b/5.1. Основы виртуализации.md
@@ -15,3 +15,6 @@
     4. Системы, выполняющие высокопроизводительные расчеты на GPU. Любо физические сервера либо сервера с виртуализацией на основе ОС. Паравиртуализаций традиционно плохо работает с таким типом задач. Если требуется разместить 1-2 высоконагруженные системы лучше разместить их на физическом сервере. Если систем много, и они часто изменяются лучше использовать виртуализацию на основе ОС.
 
 3. Две системы паравиртуализации или полной виртуализации лучше не ставить. В лучшем случае, они будут друг другу мешать и не получится получить нормальную производительность. В худшем случае они не просто не будут работать. Вложенную виртуализацию на основе паравиртуализации или полной виртуализации тоже лучше лучше не использовать, будет слишком большая потеря производительности. Единственный приемлемый вариант использования - использовать виртуализацию на основе ОС внутри паравиртуализации. Например, Docker сервер внутри виртуалки VMWare/Hyper-V.
+
+# Дополнение к 1 вопросу
+Вопрос не совсем понятен. Если спрашивается чем паравиртуализация отличается от полной виртуализации, то полная виртуализация предполагает что окружение ВМ полностью эмулируется, и все доступы к ресурсам идут через гипервизор. При использовании паравиртуализации ВМ могут обращаться к некоторым ресурсам хостовой машины напрямую, минуя гипервизор.
