--- a/5.4. Практические навыки работы с Docker.md
+++ b/5.4. Практические навыки работы с Docker.md
@@ -42,3 +42,25 @@ WEB интерфейс:
 
 Ссылка на docker образ - [grayfix/netology:5.4.2-var2
 ](https://hub.docker.com/layers/grayfix/netology/5.4.2-var2/images/sha256-3721badd178c0d1ec0aff2e134d24fb44818d67b152bf83f8646a3b74a98ca89?context=repo)
+
+3. Приложение nodejs-demo  
+
+Dockerfile приложения
+
+```docker
+FROM node:latest
+
+WORKDIR /home/nodejs-demo
+RUN git clone https://github.com/simplicitesoftware/nodejs-demo.git .
+RUN npm install
+
+EXPOSE 3000
+
+CMD ["npm", "start", "0.0.0.0"]
+```
+
+Скриншот контейнеров и сетей для них:
+![Alt text](/5.4/5.4.3-network.png)
+
+Скриншот выполненной команды curl:
+![Alt text](/5.4/5.4.3-curl.png)
