Update 6.1. Типы и структура СУБД.md

--- a/6.1. Типы и структура СУБД.md
+++ b/6.1. Типы и структура СУБД.md
@@ -16,6 +16,7 @@
 -  Система может не прислать корректный ответ или сбросить соединение - это может быть точой EL, т.к система не обладает ни консистентностью и доступностью. Остается только Latency.
 
 3. BASE и ACID приципы не могут сочетаться в одной системе по опредлеению. Но могут сущестовать гибридные решения, где они сочетаюся частично.  
-4. Система с "фиксация некоторых значений с временем жизни" и "реакция на истечение таймаута" - в первую очередь не понятно какая реакция. Если какая-то произвольная то таких готовых БД я не нашел. Можно обойись заданием по расписанию которое будет мониторить истекшие записи и что-то делать. Такое можно реализовать на любой БД. В некоторых NoSQL БД типа MongoDB, Redis, Memcached есть механизмы для установи TTL на элемент БД (документ или пару ключ:значения), после истечения TTL элемент БД обычно удаляется. Также Redis может через keyspace notifications публиковать уведомление в очередь Pub/Sub. 
 
-4a. Key-value хранилище, которое имеет механизм Pub/Sub явный намек на Redis. Думаю основная проблема что это в первую очередь Key-value хранилище и для нагруженной системы MQ все таки пригодно не так сильно как специфические MQ типа RabbitMQ или Kafka которые стали практичеси стандартом с момента написания предлагаемой к прочтению статьи. И в плане распределения нагрузки по серверам и в плане отказоустойчивости. 
+4. Система с "фиксация некоторых значений с временем жизни" и "реакция на истечение таймаута" - в первую очередь не понятно какая реакция. Если какая-то произвольная, то таких готовых БД я не нашел. Можно обойтись заданием по расписанию которое будет мониторить истекшие записи и что-то делать. Такое можно реализовать на любой БД. В некоторых NoSQL БД типа MongoDB, Redis, Memcached есть механизмы для установи TTL на элемент БД (документ или пару ключ:значения), после истечения TTL элемент удаляется. Также Redis может через keyspace notifications публиковать уведомление в очередь Pub/Sub после удаления элемента. 
+
+4a. Key-value хранилище, которое имеет механизм Pub/Sub явный намек на Redis. Думаю? основная проблема в том, что это в первую очередь Key-value хранилище. Для простой системы подойдет, но для нагруженной системы бльше подходят специфические MQ типа RabbitMQ или Kafka, которые стали практически стандартом с момента написания предлагаемой к прочтению статьи. И в плане распределения нагрузки по серверам и в плане отказоустойчивости. 
