--- a/6.4. PostgreSQL.md
+++ b/6.4. PostgreSQL.md
@@ -44,7 +44,7 @@ CREATE INDEX orders_1_price ON orders_1 (price);
 CREATE INDEX orders_2_price ON orders_2 (price);
 
 \\Определяем функцию распределения вставки данных по партициям
-CREATE OR REPLACE FUNCTION orders_insert_trigger()
+CREATE OR REPLACE FUNCTION public.orders_insert_trigger()
 RETURNS TRIGGER AS $$
 BEGIN
     IF ( NEW.price > 499 ) THEN
@@ -52,12 +52,11 @@ BEGIN
     ELSIF ( NEW.price <= 499 ) THEN
         INSERT INTO orders_2 VALUES (NEW.*);
     ELSE
-        RAISE EXCEPTION
+        RAISE EXCEPTION 'Ошибка';
     END IF;
     RETURN NULL;
 END;
-$$
-LANGUAGE plpgsql;
+$$ LANGUAGE plpgsql;
 
 \\Определяем триггер на вставку
 CREATE TRIGGER insert_orders_trigger
@@ -78,4 +77,194 @@ CREATE TRIGGER insert_orders_trigger
 ALTER TABLE public.orders ADD CONSTRAINT title_unique UNIQUE (title);
 \\ либо второй командой, но в ней нельзя задать имя для ограничений
 ALTER TABLE public.orders ADD UNIQUE (title);
+```
+
+
+# Доработки:
+
+1. Пример взят из официальной документации. 
+Select-ы все отрабатывают нормально после вставки.
+```sql
+insert into public.orders (title,price) values ('test1',50);
+insert into public.orders (title,price) values ('test2',550);
+insert into public.orders (title,price) values ('test3',550);
+insert into public.orders (title,price) values ('test4',60);
+```
+
+Вывод 
+```
+test_database=# select * from public.orders;
+ id |        title         | price
+----+----------------------+-------
+  1 | War and peace        |   100
+  2 | My little database   |   500
+  3 | Adventure psql time  |   300
+  4 | Server gravity falls |   300
+  5 | Log gossips          |   123
+  6 | WAL never lies       |   900
+  7 | Me and my bash-pet   |   499
+  8 | Dbiezdmin            |   501
+ 11 | test2                |   550
+ 12 | test3                |   550
+ 10 | test1                |    50
+ 13 | test4                |    60
+(12 rows)
+```
+Причем проблем с нумерацией столбца id нет. 
+
+Удаление из таблицы тоже отрабатывают хорошо.
+Удаление и вставка. 
+```sql
+delete from public.orders where id=10;
+delete from public.orders where id=13;
+insert into public.orders (title,price) values ('test5',60);
+insert into public.orders (title,price) values ('test6',880);
+```
+
+Вывод:
+```
+test_database=# select * from public.orders;
+ id |        title         | price
+----+----------------------+-------
+  1 | War and peace        |   100
+  2 | My little database   |   500
+  3 | Adventure psql time  |   300
+  4 | Server gravity falls |   300
+  5 | Log gossips          |   123
+  6 | WAL never lies       |   900
+  7 | Me and my bash-pet   |   499
+  8 | Dbiezdmin            |   501
+ 11 | test2                |   550
+ 12 | test3                |   550
+ 15 | test6                |   880
+ 14 | test5                |    60
+(12 rows)
+```
+Все прекрасно удаляется и нет проблем со вставкой.
+Также с нумераций по прежнему все хорошо.
+
+Также выводы данных из партиций:
+```
+test_database=# select * from public.orders_1;
+ id | title | price
+----+-------+-------
+ 11 | test2 |   550
+ 12 | test3 |   550
+ 15 | test6 |   880
+(3 rows)
+
+test_database=# select * from public.orders_2;
+ id | title | price
+----+-------+-------
+ 14 | test5 |    60
+(1 row)
+```
+
+Данных с id от 8 и ниже нет, потому что они добавлялись до создания партиций.
+
+Я вижу только одну проблему. При update нельзя выходить за границы критерия. То есть в данном случае, нельзя изменить цену заказа с цены <=499 на цену большую 499. Update в пределах условия проходит успешно.
+
+```
+test_database=# update public.orders set price=560 where id=14;
+ОШИБКА:  новая строка в отношении "orders_2" нарушает ограничение-проверку "orders_2_price_check"
+DETAIL:  Ошибочная строка содержит (14, test5, 560).
+
+test_database=# update public.orders set price=77 where id=14;
+UPDATE 1
+
+test_database=# select * from public.orders;
+ id |        title         | price
+----+----------------------+-------
+  1 | War and peace        |   100
+  2 | My little database   |   500
+  3 | Adventure psql time  |   300
+  4 | Server gravity falls |   300
+  5 | Log gossips          |   123
+  6 | WAL never lies       |   900
+  7 | Me and my bash-pet   |   499
+  8 | Dbiezdmin            |   501
+ 11 | test2                |   550
+ 12 | test3                |   550
+ 15 | test6                |   880
+ 14 | test5                |    77
+(12 rows)
+```
+
+Пример функции и тригера на update:
+```sql
+CREATE OR REPLACE FUNCTION public.orders_update_trigger()
+RETURNS TRIGGER AS $$
+BEGIN
+    IF ( NEW.price > 499 AND OLD.PRICE <= 499) THEN
+	DELETE FROM orders_2 where id = old.id;
+        INSERT INTO orders_1 VALUES (NEW.*);
+    ELSIF ( NEW.price <= 499 AND OLD.PRICE > 499) THEN
+        DELETE FROM orders_1 where id = old.id;
+        INSERT INTO orders_2 VALUES (NEW.*);
+    ELSE
+         RETURN NEW;
+    END IF;
+	RETURN NULL;
+END;
+$$ LANGUAGE plpgsql;
+
+CREATE TRIGGER update_orders_trigger
+    BEFORE UPDATE ON orders_1
+    FOR EACH ROW EXECUTE PROCEDURE orders_update_trigger();
+
+CREATE TRIGGER update_orders_trigger
+    BEFORE UPDATE ON orders_2
+    FOR EACH ROW EXECUTE PROCEDURE orders_update_trigger();
+```
+
+Проверка:
+```
+test_database=# select * from orders_1;
+ id | title | price
+----+-------+-------
+ 11 | test2 |   550
+ 12 | test3 |   550
+ 15 | test6 |   880
+(3 rows)
+
+test_database=# select * from orders_2;
+ id | title | price
+----+-------+-------
+ 14 | test5 |    77
+(1 row)
+
+test_database=# update orders set price=600 where id=14;
+UPDATE 0
+test_database=# update orders set price=18 where id=15;
+UPDATE 0
+test_database=# select * from orders_1;
+ id | title | price
+----+-------+-------
+ 11 | test2 |   550
+ 12 | test3 |   550
+ 14 | test5 |   600
+(3 rows)
+
+test_database=# select * from orders_2;
+ id | title | price
+----+-------+-------
+ 15 | test6 |    18
+(1 row)
+
+test_database=# update orders set price=60 where id=15;
+UPDATE 1
+test_database=# select * from orders_1;
+ id | title | price
+----+-------+-------
+ 11 | test2 |   550
+ 12 | test3 |   550
+ 14 | test5 |   600
+(3 rows)
+
+test_database=# select * from orders_2;
+ id | title | price
+----+-------+-------
+ 15 | test6 |    60
+(1 row)
+
 ```
