soma change in 7.5.

--- a/7.5. Основы golang.md
+++ b/7.5. Основы golang.md
@@ -6,4 +6,6 @@
    - [Перевода метров в футы](/7.5/m_to_ft/)
    - [Поиск минимума в списке](/7.5/min_from_array/)
    - [Вывод чисел делящихся на 3 без остатка](/7.5/div_3/)
-4. Файлы с тестами лежат рядом с файлами примеров
+4. Файлы с тестами лежат рядом с файлами примеров. Пришлось переписать немного третий пункт и вынести все действия в функции. 
+
+Единственное что не понял как правильно оформить эти программы чтобы при `go run`, `go build` и `go test` не нужно было указывать конкретные файлы.  И чтобы go не ругался `go: cannot find main module, but found`. Пока дальше не стал копать.
